--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ section {
 
 #home .intro {
     background: rgba(0, 0, 0, 0.5);
-    padding: 20px;
+    padding: 60px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -63,6 +63,40 @@ section {
 
 .project {
     margin-bottom: 20px;
+}
+
+
+.publication {
+    margin: 20px 20px;
+}
+
+.publication h2 {
+    font-size: 24px;
+    border-bottom: 2px solid #333;
+    padding-bottom: 5px;
+}
+
+.publication ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.citation {
+    margin: 10px 0;
+    font-size: 16px;
+    line-height: 1.5;
+    font-style: italic;
+}
+
+.citation::before {
+    content: '• ';
+    color: #333;
+    font-weight: bold;
+}
+
+.citation em {
+    font-style: normal;
+    font-weight: bold;
 }
 
 footer {
